2005-12-19  Christian Biesinger  <cbiesinger@web.de>

	* INSTALL: Mention new --enable-svg option
	* README: Add notes for the new BeOS backend
	* configure.in: Add disabled by default BeOS backend
	* src/Makefile.am: Add BeOS files
	* src/cairo-beos-surface.cpp: New
	* src/cairo-beos.h: New
	* src/cairo-features.h.in: BEOS_SURFACE_FEATURE
	* src/cairoint.h: BeOS mutex functions
	* test/.cvsignore: Ignore files generates by the BeOS tests
	* test/Makefile.am: Add cairo-test-beos.*
	* test/cairo-test-beos.cpp: New. (Must be a C++ file, hence not part of
	cairo-test.c)
	* test/cairo-test-beos.h: New.
	* test/cairo-test.c: (cairo_test_expecting): Test BeOS backend.

2005-12-19  Christian Biesinger  <cbiesinger@web.de>

	reviewed by: cworth

	* src/cairo-clip-private.h: Move enum to cairoint.h
	* src/cairoint.h: add CAIRO_BEGIN_DECLS and CAIRO_END_DECLS, and
	move an enum from cairo-clip-private.h here (C++ doesn't like
	forward-declarations of enums). Final patch for allowing C++
	backends.

2005-12-17  Christian Biesinger  <cbiesinger@web.de>

	* configure.in: make the SVG backend freetype message actually mention SVG
	rather than PDF.

2005-12-16  Carl Worth  <cworth@cworth.org>

	* src/test-fallback-surface.c:
	(_test_fallback_surface_create_similar): Return a
	test_fallback_surface_t rather than a cairo_image_surface_t for
	better testing, (otherwise, an image surface would meet the
	semantic demands of create_similar just fine).

2005-12-16  Carl Worth  <cworth@cworth.org>

	* configure.in: Add a new option --enable-test-surfaces.

	* src/Makefile.am:
	* src/test-fallback-surface.h:	
	* src/test-fallback-surface.c: (_test_fallback_surface_create),
	(_test_fallback_surface_create_for_data),
	(_test_fallback_surface_create_similar),
	(_test_fallback_surface_finish),
	(_test_fallback_surface_acquire_source_image),
	(_test_fallback_surface_release_source_image),
	(_test_fallback_surface_acquire_dest_image),
	(_test_fallback_surface_release_dest_image),